- 1/27/2006, Process Scheduler, Suspend / Resume / Stop / Spawn.
  * Altered mqo_process to contain a status symbol, which will contain one of
    the following -- suspended, running, paused, halted.
  * Altered mqo_process to contain references to a next and a prev process.
  * Altered mqo_continue to cycle between paused processes.
  * Added the mqo_spawn function.
  * Altered mqo_execute to use mqo_spawn, then repeatedly mqo_continue until
    there are no more processes.
  * Altered all users of MQO_XP to correctly use MQO_NEXT_INSTR, MQO_NEXT_PROC
    or MQO_NEXT_LIFE to signal why a non-local exit was required.
  * Added show_process to show.c
  * Added the spawn primitive, which creates a new process that will execute
    the supplied thunk.
  * Added the pause primitive, which marks the active process as paused,
    permitting the virtual machine to proceed to the next paused process.
  * Added the halt primitive, which marks the specified process as halted. If
    no process is specified, it will halt the active process.
  * Added the suspend primitive, which marks the specified process as 
    suspended.  If no process is specified, it will suspend the active process
    and permit the virtual machine to cycle to the next process.
  * Added the resume primitive, which marks a suspended process as merely
    paused, then pauses the active process.
  * Added the process-status primitive, which identifies the current state 
    of the specified process.
  * Added the active-process primitive, which returns the active process.
  * Added the halt primitive which puts the process in halted state.  Halted
    processes cannot be resumed
  * Modified mqo_err to stop the specified process if the error is not
    handled.
  * Added load-ms.
  * Added load, which brokers against load-ms and load-mo, based on the
    file extension.
  * Altered run.scm to run any files that do not end in .mo as source files,
    with automatic compilation and optimization.

